@@ -6,7 +6,7 @@
    details.
 
    Encrypt message for Cypherpunk remailer chain
-   $Id: chain1.c,v 1.7 2003/05/05 11:03:40 weaselp Exp $ */
+   $Id: chain1.c,v 1.8 2003/09/29 01:06:54 weaselp Exp $ */
 
 
 #include "mix3.h"
@@ -168,14 +168,14 @@ int t1_encrypt(int type, BUFFER *message, char *chainstr, int latency,
     goto end;
   }
   if (chain[0] == 0)
-    chain[0] = chain_randfinal(type, remailer, badchains, maxrem, 1, chain, chainlen);
+    chain[0] = chain_randfinal(type, remailer, badchains, maxrem, 1, chain, chainlen, 0);
 
   if (chain[0] == -1) {
     clienterr(feedback, "Invalid remailer chain!");
     err = -1;
     goto end;
   }
-  if (chain_rand(remailer, badchains, maxrem, chain, chainlen, 1) == -1) {
+  if (chain_rand(remailer, badchains, maxrem, chain, chainlen, 1, 0) == -1) {
     clienterr(feedback, "No reliable remailers!");
     err = -1;
     goto end;
